@@ -2,27 +2,27 @@ Package: WufooR
 Type: Package
 Title: R Wrapper for the 'Wufoo.com' - The Form Building Service
 Description: Allows form managers to download entries from their respondents
-    using Wufoo JSON API. Additionally, the Wufoo reports - when public - can be
+    using Wufoo JSON API (<https://www.wufoo.com>). Additionally, the Wufoo reports - when public - can be
     also acquired programmatically. Note that building new forms within this package
     is not supported.
-Version: 0.6.1
-Date: 2016-03-07
+Version: 0.6.2
+Date: 2017-04-18
 Authors@R: c(
     person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"), comment = "@dmpe"),
     person("Maksim", "Pecherskiy", role = c("ctb"), comment = "@MrMaksimize")
     )
 Maintainer: John Malc <cincenko@outlook.com>
-Depends: R (>= 3.2.2)
-Imports: httr (>= 1.1.0), jsonlite (>= 0.9.19), dplyr (>= 0.4.3)
-Suggests: roxygen2 (>= 5.0.1), knitr (>= 1.12.3), testthat (>= 0.11.0)
+Depends: R (>= 3.3.3)
+Imports: httr (>= 1.2.0), jsonlite (>= 1.4), dplyr (>= 0.5.0)
+Suggests: roxygen2 (>= 6.0.1), knitr (>= 1.15.0), testthat (>= 1.0.2)
 VignetteBuilder: knitr
 License: Apache License 2.0
-URL: http://github.com/dmpe/wufoor
-BugReports: http://github.com/dmpe/wufoor/issues
-RoxygenNote: 5.0.1
+URL: https://github.com/dmpe/wufoor
+BugReports: https://github.com/dmpe/wufoor/issues
+RoxygenNote: 6.0.1
 NeedsCompilation: no
-Packaged: 2016-03-07 08:59:21 UTC; jm
+Packaged: 2017-04-20 18:37:26 UTC; jm
 Author: John Malc [aut, cre] (@dmpe),
   Maksim Pecherskiy [ctb] (@MrMaksimize)
 Repository: CRAN
-Date/Publication: 2016-03-08 06:22:38
+Date/Publication: 2017-04-20 21:27:22 UTC
