@@ -1,26 +1,26 @@
-c24f31b8da46049738325360bac547f2 *DESCRIPTION
+872e6f7098dc98746296ce61773e2301 *DESCRIPTION
 66fa49c4b62d16cf264c1cf1de1a4093 *NAMESPACE
-2825bd970a37938d00960559c2fcfdc4 *NEWS
+8e0befa1e9d721663a99df8fbb575128 *NEWS
 63e954b4a73a3553932effbdd024caf5 *R/API.R
-1a89076e106525052ba08f51d0007904 *R/Fields.R
-7518ec9b3cbcf0337074115e8343c62f *R/Form.R
+889d8bc360f107af00a92e60841a392c *R/Fields.R
+5a97d3d11cb19ddc31fb99129f0779e9 *R/Form.R
 209e03243f282964e05824e35faf2722 *R/Reports.R
 86412529698dea5f3400e080fa9f0b41 *R/Users.R
-9e6cf3c8b18209a1a907fbadb964125c *README.md
-14632e90ff25f15d8a73f8f6376c3480 *build/vignette.rds
+1a3b652b0f4b016f789ed76080fd8f95 *README.md
+15cf7b481e5e4841da8a9360ace9cf81 *build/vignette.rds
 8e9c5a6d7c81de042c6cc54bc41b96b2 *inst/doc/Tutorial.R
 6c1b8471f56059f20c8dc3a69c3c48a4 *inst/doc/Tutorial.Rmd
-56b3dd113331406fa24454327188a9fb *inst/doc/Tutorial.html
-82ffde76158fbf2986d78125645f7008 *man/auth_name.Rd
-7f16c5192f3d0119076db3ddddcf5da9 *man/fields_info.Rd
-d7b3a2f09e5306701f25c66cfa9edc2a *man/form_entries.Rd
-6d4ad085de78cdc8d196db79b5a61c29 *man/form_entriesCount.Rd
-d3657cb4f0894f6ff4c5e7316ecbb24b *man/form_entriesFromCSV.Rd
-bd102c834c22537e0b0a464400f85014 *man/form_info.Rd
-598a4046e52881efb67e4fbec168b024 *man/reports_info.Rd
-9377b146cb33fac486e5262d501118bc *man/user_info.Rd
+d0a23e0278548019c5c7d8681dedc414 *inst/doc/Tutorial.html
+67e65b5b75161deb2838c167b33df3f6 *man/auth_name.Rd
+7adea46d02410a473b5ed5d348783fb9 *man/fields_info.Rd
+07f0e3f2cc41c1eaa0b4f87029069908 *man/form_entries.Rd
+a0aba9b2fe45c3ba18cae5b17504071d *man/form_entriesCount.Rd
+11c1be5868fc2bf954f7632d5cf76b69 *man/form_entriesFromCSV.Rd
+4e8e9a6f7dc5f4df3807d886137ada20 *man/form_info.Rd
+df9a95fefbfd09113ee41b9826ceb46b *man/reports_info.Rd
+6aaf7a3bc412d21a776ce8f7fd16c5d3 *man/user_info.Rd
 9090cf3da17a441ab205a8cca6d69930 *tests/testthat.R
-d7b1e5320787d89d6702cc87d152dbed *tests/testthat/test-fieldsAndreports.R
-93a8d526a15ae500cd7161c1b494d8a4 *tests/testthat/test-forms.R
+956c2fc6332aa4d3d18f3e2a9cad70f8 *tests/testthat/test-fieldsAndreports.R
+5838a1623b9b1fca48e6e9b8a52cda1d *tests/testthat/test-forms.R
 c426540a73145e6d7d8ea1eea1049d44 *tests/testthat/test-users.R
 6c1b8471f56059f20c8dc3a69c3c48a4 *vignettes/Tutorial.Rmd
