@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/API.R
 \name{auth_name}
-\alias{auth_key}
 \alias{auth_name}
+\alias{auth_key}
 \title{Authentication}
 \usage{
 auth_name(x)
@@ -31,4 +31,3 @@ options(Wufoo_Name = "johnmalc", Wufoo_API = "F1QH-Q64B-BSBI-JASJ")
 The code for these methods has been developed by Scott Chamberlain \url{https://github.com/sckott} for his 
 \url{https://github.com/ropensci/rnoaa} package. His copyright!
 }
-
