@@ -13,7 +13,7 @@ test_that("Form request returns 17 rows, always", {
 test_that("Form returns entries, with the requested URL", {
   userDB <- form_entries(formIdentifier = "z5kqx7h1gtvg4g", systemFields = "false", showRequestURL = FALSE)
   
-  expect_more_than(length(userDB), 1)
+  expect_gt(length(userDB), 1)
   expect_output(form_entries(formIdentifier = "z5kqx7h1gtvg4g", showRequestURL = T), "The requested URL has been this:")
 })
 
